display works kinda

--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
   </head>
   <body>
     <div class="calculator">
-      <div class="display"><span class="display-text">123</span></div>
+      <div class="display"><span class="display-text"></span></div>
       <div class="btn-grid-container">
-        <button class="btn seven"><span>7</span></button>
-        <button class="btn eight"><span>8</span></button>
-        <button class="btn nine"><span>9</span></button>
+        <button class="btn digit seven">7</button>
+        <button class="btn digit eight">8</button>
+        <button class="btn digit nine"><span>9</span></button>
         <button class="btn oper plus"><span>+</span></button>
-        <button class="btn four"><span>4</span></button>
-        <button class="btn five"><span>5</span></button>
-        <button class="btn six"><span>6</span></button>
+        <button class="btn digit four"><span>4</span></button>
+        <button class="btn digit five"><span>5</span></button>
+        <button class="btn digit six"><span>6</span></button>
         <button class="btn oper minus"><span>-</span></button>
-        <button class="btn one"><span>1</span></button>
-        <button class="btn two"><span>2</span></button>
-        <button class="btn three"><span>3</span></button>
+        <button class="btn digit one"><span>1</span></button>
+        <button class="btn digit two"><span>2</span></button>
+        <button class="btn digit three"><span>3</span></button>
         <button class="btn oper multiply"><span>x</span></button>
         <button class="btn clear"><span>c</span></button>
-        <button class="btn zero"><span>0</span></button>
+        <button class="btn digit zero"><span>0</span></button>
         <button class="btn oper equals"><span>=</span></button>
         <button class="btn oper divide"><span>/</span></button>
       </div>
