bad commit message

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <button class="btn digit one"><span>1</span></button>
         <button class="btn digit two"><span>2</span></button>
         <button class="btn digit three"><span>3</span></button>
-        <button class="btn oper multiply"><span>x</span></button>
+        <button class="btn oper multiply"><span>*</span></button>
         <button class="btn clear"><span>c</span></button>
         <button class="btn digit zero"><span>0</span></button>
         <button class="btn oper equals"><span>=</span></button>
