--- a/index.html
+++ b/index.html
@@ -24,19 +24,23 @@
         <button class="btn digit seven">7</button>
         <button class="btn digit eight">8</button>
         <button class="btn digit nine"><span>9</span></button>
-        <button class="btn oper plus"><span>+</span></button>
+        <button class="btn oper plus"><span>&#43;</span></button>
+        <button class="btn oper back"><span><</span></button>
         <button class="btn digit four"><span>4</span></button>
         <button class="btn digit five"><span>5</span></button>
         <button class="btn digit six"><span>6</span></button>
         <button class="btn oper minus"><span>-</span></button>
+        <button class="btn oper percent"><span>&#37;</span></button>
         <button class="btn digit one"><span>1</span></button>
         <button class="btn digit two"><span>2</span></button>
         <button class="btn digit three"><span>3</span></button>
-        <button class="btn oper multiply"><span>*</span></button>
+        <button class="btn oper multiply"><span>&#215;</span></button>
+        <button class="btn oper power"><span>x&#178;</span></button>
         <button class="btn clear"><span>c</span></button>
         <button class="btn digit zero"><span>0</span></button>
+        <button class="btn digit point"><span>.</span></button>
+        <button class="btn oper divide"><span>&divide;</span></button>
         <button class="btn oper equals"><span>=</span></button>
-        <button class="btn oper divide"><span>/</span></button>
       </div>
     </div>
   </body>
