swapped flex with grid

--- a/index.html
+++ b/index.html
@@ -7,23 +7,18 @@
     <script src="script.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Courier-New:wght@500;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/segment7" type="text/css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="calculator-container">
       <div class="calculator">
-        <div class="display"><span class="display-text"></span></div>
         <div class="btn-grid-container">
-          <button class="btn digit seven">7</button>
-          <button class="btn digit eight">8</button>
+          <div class="display"><span class="display-text">0</span></div>
+          <button class="btn digit seven"><span>7</span></button>
+          <button class="btn digit eight"><span>8</span></button>
           <button class="btn digit nine"><span>9</span></button>
           <button class="btn oper plus"><span>&#43;</span></button>
           <button class="btn oper back"><span>&#8656;</span></button>
